Logic implemented behind the process of changing avatar (#57)
* avatar-change.html page for choosing a new avatar is created, along with the new js script change-avatar.js for cropping the image

* integration and configuration of cloudinary

* new endpoint /user/profile/avatar/change created for hitting the new page

* rest controller created for uploading images to cloudinary and csrf disabled for this endpoint

* hidding cloudinary credentials

* users have default avatar url, uploaded in cloudinary

* a user can now change their avatars

* avatar-change.html made look better

* an alert is shown when the avatar updated fails

--- a/TestingEz/src/main/resources/templates/fragments/headers.html
+++ b/TestingEz/src/main/resources/templates/fragments/headers.html
@@ -13,11 +13,11 @@
                th:href="@{/user/profile}"
             >
                 <img
-                        src="/images/astronaut.png"
+                        th:src="${avatarUrl}"
                         alt="default-avatar"
                         width="35"
                         height="35"
-                        class="d-inline-block align-text-middle me-1"
+                        class="d-inline-block align-text-middle me-1 rounded-circle"
                 />
                 <span sec:authentication="name" class="text-dark"></span></a
             >
